--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 branches:
   only:  # Only build on PRs (or pushes) to master branch.
     - master
-
 sudo: required
 services:
   - docker
-
 language: python
 python:
   - "2.7"
@@ -13,9 +11,9 @@ python:
   - "3.5"
   - "3.6"
   - "nightly"
-
+before_install:
+  - sudo apt-get -qq update && sudo apt-get install -yq docker-engine
 install:
   - pip install -r requirements.txt
-
 script:
   - py.test
