--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
-branches:
-  only:
-    - master
-sudo: required
-services:
-  - docker
 language: python
 python:
   - 2.7
   - 3.4
   - 3.5
   - 3.6
-  - nightly
+branches:
+  only:
+    - master
+sudo: required
+services:
+  - docker
+env:
+  - TEST_PREFIX="not test_build_image_"  # Do not build Docker images.
+  - TEST_PREFIX="test_build_image_"  # Build Docker images.
 before_install:
   - travis_retry sudo apt-get update && sudo apt-get install -yq docker-engine
 install:
   - travis_retry pip install -r requirements.txt
   - travis_retry pip install pytest-cov
 script:
-  - travis_wait 90 py.test --cov=./
+  - travis_wait 90 py.test --cov=./ -k TEST_PREFIX
 after_success:
   - bash <(curl -s https://codecov.io/bash)
