fix -k arg in pytest call

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ install:
   - travis_retry pip install -r requirements.txt
   - travis_retry pip install pytest-cov
 script:
-  - travis_wait 90 py.test --cov=./ -k TEST_PREFIX
+  - travis_wait 90 py.test -k $TEST_PREFIX --cov=./
 after_success:
   - bash <(curl -s https://codecov.io/bash)
