--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,16 @@ sudo: required
 services:
   - docker
 env:
-  - BUILD_IMAGES=true
-  - BUILD_IMAGES=false
+  - PYTEST_EXPRESSION="not test_build_image_"
+  - PYTEST_EXPRESSION="test_build_image_ants_"
+  - PYTEST_EXPRESSION="test_build_image_fsl_"
+  - PYTEST_EXPRESSION="test_build_image_spm_"
 before_install:
   - travis_retry sudo apt-get update && sudo apt-get install -yq docker-engine
 install:
   - travis_retry pip install -r requirements.txt
   - travis_retry pip install pytest-cov
 script:
-  - function run_tests {
-    if $BUILD_IMAGES; then
-      travis_wait 90 py.test -v -k "test_build_image_" --cov=./ neurodocker;
-    else
-      py.test -v -k "not test_build_image_" --cov=./ neurodocker;
-    fi }
-  - run_tests
+  - travis_wait 50 pytest -v -k=\"$PYTEST_EXPRESSION\" --cov=./ neurodocker
 after_success:
   - bash <(curl -s https://codecov.io/bash)
