--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,22 @@ sudo: required
 services:
   - docker
 env:
-  - PYTEST_EXPRESSION="not test_build_image_"
-  - PYTEST_EXPRESSION="test_build_image_ants_"
-  - PYTEST_EXPRESSION="test_build_image_fsl_"
-  - PYTEST_EXPRESSION="test_build_image_spm_"
+  - IMAGE_TO_BUILD=none
+  - IMAGE_TO_BUILD=ants
+  - IMAGE_TO_BUILD=fsl
+  - IMAGE_TO_BUILD=spm
 before_install:
   - travis_retry sudo apt-get update && sudo apt-get install -yq docker-engine
 install:
   - travis_retry pip install -r requirements.txt
   - travis_retry pip install pytest-cov
 script:
-  - travis_wait 50 py.test -v -k=\'$PYTEST_EXPRESSION\' --cov=./ neurodocker
+  - function run_tests {
+      if [ "$IMAGE_TO_BUILD" == 'none' ]; then
+        pytest -v -k "not test_build_image" --cov=./ neurodocker;
+      else
+        travis_wait 50 pytest -v -k "test_build_image_$IMAGE_TO_BUILD" --cov=./ neurodocker
+    }
+  - run_tests
 after_success:
   - bash <(curl -s https://codecov.io/bash)
