--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ script:
       if [ "$IMAGE_TO_BUILD" == 'none' ]; then
         pytest -v -k "not test_build_image" --cov=./ neurodocker;
       else
-        travis_wait 50 pytest -v -k "test_build_image_$IMAGE_TO_BUILD" --cov=./ neurodocker
-    }
+        travis_wait 50 pytest -v -k "test_build_image_$IMAGE_TO_BUILD" --cov=./ neurodocker;
+      fi }
   - run_tests
 after_success:
   - bash <(curl -s https://codecov.io/bash)
