add afni to CI tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
 
 env:
   - INTERFACE_TO_BUILD=none
+  - INTERFACE_TO_BUILD=afni
   - INTERFACE_TO_BUILD=ants
   - INTERFACE_TO_BUILD=fsl
   - INTERFACE_TO_BUILD=miniconda
