--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
   - INTERFACE_TO_BUILD=none
   - INTERFACE_TO_BUILD=afni
   - INTERFACE_TO_BUILD=ants
+  - INTERFACE_TO_BUILD=freesurfer
   - INTERFACE_TO_BUILD=fsl
   - INTERFACE_TO_BUILD=miniconda
   - INTERFACE_TO_BUILD=mrtrix3
