--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,11 @@ install:
   - travis_retry pip install dropbox pytest-cov reprozip
 script:
   - function run_tests {
-      if [ "$INTERFACE_TO_BUILD" == 'none' ]; then
-        python -m pytest -v -k "not test_build_image" --cov=./ neurodocker
-      else
-        travis_wait 50 python -m pytest -v -k "test_build_image_$INTERFACE_TO_BUILD" --cov=./ neurodocker
-      fi
-    }
+    if [ "$INTERFACE_TO_BUILD" == 'none' ]; then
+    python -m pytest -v -k "not test_build_image" --cov=./ neurodocker;
+    else
+    travis_wait 50 python -m pytest -v -k "test_build_image_$INTERFACE_TO_BUILD" --cov=./ neurodocker;
+    fi }
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - run_tests
 after_success:
