update for refactor to yaml

--- a/neurodocker/specs/afni.yaml
+++ b/neurodocker/specs/afni.yaml
@@ -6,6 +6,18 @@
 
 generic:
   binaries:
-    dependencies: null
+    dependencies:
+      apt: ed gsl-bin libglu1-mesa-dev libglib2.0-0 libglw1-mesa libgomp1 libjpeg62 libxm4 netpbm tcsh xfonts-base xvfb
+      yum: ed gsl libGLU libgomp libpng12 libXp libXpm netpbm-progs openmotif R-devel tcsh xorg-x11-fonts-misc xorg-x11-server-Xvfb
     instructions: |
-      RUN echo "todo"
+      ENV PATH={install_path}:$PATH
+      RUN {install_deps}
+          && libs_path=/usr/lib/x86_64-linux-gnu \
+          && if [ -f $libs_path/libgsl.so.19 ]; then \
+                 ln $libs_path/libgsl.so.19 $libs_path/libgsl.so.0; \
+             fi \
+          && echo "Downloading AFNI ..." \
+          && mkdir -p {install_path} \
+          && curl -sSL --retry 5 {binaries_url} \
+          | tar -xz -C {install_path} --strip-components 1
+      {optional_debian_extras}
