--- a/neurodocker/specs/fsl.yaml
+++ b/neurodocker/specs/fsl.yaml
@@ -8,7 +8,7 @@
 # Website: https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/
 # License: https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/Licence
 
-generic:
+">=4.0.10":
   binaries:
     dependencies:
       apt: bc dc libfontconfig1 libfreetype6 libgl1-mesa-dev libglu1-mesa-dev libgomp1 libice6 libmng1 libxcursor1 libxft2 libxinerama1 libxrandr2 libxrender1 libxt6
@@ -17,10 +17,25 @@ generic:
       RUN {install_deps}
           && echo "Downloading FSL ..."
           && curl -sSL --retry 5 {binaries_url}
-          | tar -zx -C {install_path} --strip-components 1
-          && if [ -f {install_path}/etc/fslconf/fslpython_install.sh ]; then
-               bash {install_path}/etc/fslconf/fslpython_install.sh -q -f {install_path}
-             fi
+          | tar -xz -C {install_path} --strip-components 1
+          && bash {install_path}/etc/fslconf/fslpython_install.sh -q -f {install_path}
+          && sed -i '$iecho Some packages in this Docker container are non-free' $ND_ENTRYPOINT
+          && sed -i '$iecho If you are considering commercial use of this container, please consult the relevant license:' $ND_ENTRYPOINT
+          && sed -i '$iecho https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/Licence' $ND_ENTRYPOINT
+          && sed -i '$isource $FSLDIR/etc/fslconf/fsl.sh' $ND_ENTRYPOINT
+      ENV FSLDIR={install_path}
+          PATH={install_path}/bin:$PATH
+
+"<=4.0.9":
+  binaries:
+    dependencies:
+      apt: bc dc libfontconfig1 libfreetype6 libgl1-mesa-dev libglu1-mesa-dev libgomp1 libice6 libmng1 libxcursor1 libxft2 libxinerama1 libxrandr2 libxrender1 libxt6
+      yum: bc libGL libGLU libgomp libICE libjpeg libmng libpng12 libSM libX11 libXcursor libXext libXft libXinerama libXrandr libXt
+    instructions: |
+      RUN {install_deps}
+          && echo "Downloading FSL ..."
+          && curl -sSL --retry 5 {binaries_url}
+          | tar -xz -C {install_path} --strip-components 1
           && sed -i '$iecho Some packages in this Docker container are non-free' $ND_ENTRYPOINT
           && sed -i '$iecho If you are considering commercial use of this container, please consult the relevant license:' $ND_ENTRYPOINT
           && sed -i '$iecho https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/Licence' $ND_ENTRYPOINT
