--- a/neurodocker/specs/ants.yaml
+++ b/neurodocker/specs/ants.yaml
@@ -9,27 +9,20 @@
 
 binary_urls:
   "2.2.0": "https://dl.dropbox.com/s/2f4sui1z6lcgyek/ANTs-Linux-centos5_x86_64-v2.2.0-0740f91.tar.gz"
-  "2.1.0": "https://dl.dropbox.com/s/h8k4v6d1xrv0wbe/ANTs-Linux-centos5_x86_64-v2.1.0-78931aa.tar.gz"
-  "2.0.3": "https://dl.dropbox.com/s/oe4v52lveyt1ry9/ANTs-Linux-centos5_x86_64-v2.0.3-c996539.tar.gz"
-  "2.0.0": "https://dl.dropbox.com/s/kgqydc44cc2uigb/ANTs-Linux-centos5_x86_64-v2.0.0-7ae1107.tar.gz"
+  "2.1.0": https://dl.dropbox.com/s/h8k4v6d1xrv0wbe/ANTs-Linux-centos5_x86_64-v2.1.0-78931aa.tar.gz
+  "2.0.3": https://dl.dropbox.com/s/oe4v52lveyt1ry9/ANTs-Linux-centos5_x86_64-v2.0.3-c996539.tar.gz
+  "2.0.0": https://dl.dropbox.com/s/kgqydc44cc2uigb/ANTs-Linux-centos5_x86_64-v2.0.0-7ae1107.tar.gz
 
 generic:
-
   binaries:
     env:
       ANTSPATH: "{{ ants.install_path }}"
       PATH: "{{ ants.install_path }}:$PATH"
     instructions: |
-      {% macro apt_install(pkgs) -%}
-        apt-get update && apt-get install
-          {% for pkg in pkgs -%}
-            {{ pkg }}
-          {% endfor %}
-      {%- endmacro %}
-      {{ apt_install(pkgs=['git', 'vim']) }}
       echo "Downloading ANTs ..."
       mkdir -p {{ ants.install_path }}
-      curl -sSL --retry 5 {{ ants.binaries_url }} | tar -xz -C {{ ants.install_path }} --strip-components 1
+      curl {{ ants.curl_opts }} {{ ants.binaries_url }} \
+      | tar -xz -C {{ ants.install_path }} --strip-components 1
 
   source:
     dependencies:
@@ -40,15 +33,15 @@ generic:
       PATH: "{{ ants.install_path }}/bin:$PATH"
       LD_LIBRARY_PATH: "{{ ants.install_path }}/lib:$LD_LIBRARY_PATH"
     instructions: |
-      git clone https://github.com/ANTsX/ANTs.git /tmps/ants_source
+      mkdir -p /tmp/ants/build
+      git clone https://github.com/ANTsX/ANTs.git /tmps/ants/source
       {% if ants.version != "master" and ants.version != "latest" %}
-      cd /tmp/ants_source
+      cd /tmp/ants/source
       git checkout {{ ants.version }}
       {% endif %}
-      mkdir /tmp/ants_build
       cd /tmp/ants_build
-      cmake -DBUILD_SHARED_LIBS=ON /tmp/ants_source
-      make -j 1
+      cmake {{ ants.cmake_opts|default("-DBUILD_SHARED_LIBS=ON") }} /tmp/ants_source
+      make {{ ants.make_opts|default("-j1") }}
       mkdir -p {{ ants.install_path }}
       mv bin lib {{ ants.install_path }}/
       mv /tmp/ants_source/Scripts/* {{ ants.install_path }}/bin
