--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -55,17 +55,33 @@ generic:
       apt: ed gsl-bin libglu1-mesa-dev libglib2.0-0 libglw1-mesa libgomp1 libjpeg62 libxm4 netpbm tcsh xfonts-base xvfb
       yum: ed gsl libGLU libgomp libpng12 libXp libXpm netpbm-progs openmotif R-devel tcsh xorg-x11-fonts-misc xorg-x11-server-Xvfb
     instructions: |
-      {install_deps}
-      && libs_path=/usr/lib/x86_64-linux-gnu
-      && echo "Downloading AFNI ..."
-      && mkdir -p {install_path}
-      && curl -sSL --retry 5 {binaries_url}
+      {{ afni.install_dependencies() }}
+      echo "Downloading AFNI ..."
+      mkdir -p {{ afni.install_path }}
+      curl {{ afni.curl_opts }} {{ afni.binaries_url }}
       | tar -xz -C {install_path} --strip-components 1
-      {optional_install_python}
-      {optional_install_R_pkgs}
+      {{ install_python }}
+      {{ install_R_pkgs }}
 
   source:
     dependencies:
       apt: null
-      yum: null
+      yum: "compat-gcc-34 expat-devel gcc gcc-c++ gcc-gfortran git glib2-devel gsl-devel libXext-devel libXi-devel libXmu-devel libXpm-devel libXt-devel m4 make mesa-libGL-devel mesa-libGLU-devel netpbm-devel openmotif-devel R R-devel tcsh zlib-devel"
     instructions: |
+      echo "Downloading AFNI ..." \
+      cd /opt \
+      git clone https://github.com/afni/afni.git \
+      cd afni \
+      git checkout {{ afni.version }} \
+      cd src \
+      cp Makefile.linux_openmp_64 Makefile \
+      perl -p -i -e 's/^LGIFTI.*/LGIFTI    = -lexpat/' Makefile \
+      perl -p -i -e 's/^USE_LOCAL_X_TREE/#USE_LOCAL_X_TREE/' Makefile \
+      perl -p -i -e 's/XLIBS = \$\(XROOT\)\/lib64\/libXm.a -lXt/XLIBS = \$\(XROOT\)\/lib64\/libXm.a \$\(XROOT\)\/lib\/x86_64-linux-gnu\/libXm.a -lXt/' Makefile \
+      perl -p -i -e 's/^# XLIBS =/XLIBS =/' Makefile \
+      perl -p -i -e 's/^CCOLD.*/CCOLD  = \$\(CC\)/' Makefile \
+      perl -p -i -e 's/(^LFLAGS.*)/$1 -L\/usr\/lib\/x86_64-linux-gnu/' Makefile \
+      perl -p -i -e 's/(^PLFLAGS.*)/$1 -L\/usr\/lib -L\/usr\/lib\/x86_64-linux-gnu/' Makefile \
+      perl -p -i -e 's/-lXpm -lXext/-lXpm -lfontconfig -lXext/' Makefile \
+      perl -p -i -e 's/(^SUMA_INCLUDE_PATH.*)/$1 -I\/usr\/lib\/x86_64-linux-gnu\/glib-2.0\/include/' Makefile \
+      make INSTALLDIR={{ afni.install_path }} vastness
