--- a/neurodocker/templates/ants.yaml
+++ b/neurodocker/templates/ants.yaml
@@ -9,7 +9,7 @@
 generic:
   binaries:
     urls:
-      "2.2.0": "https://dl.dropbox.com/s/2f4sui1z6lcgyek/ANTs-Linux-centos5_x86_64-v2.2.0-0740f91.tar.gz"
+      "2.2.0": https://dl.dropbox.com/s/2f4sui1z6lcgyek/ANTs-Linux-centos5_x86_64-v2.2.0-0740f91.tar.gz
       "2.1.0": https://dl.dropbox.com/s/h8k4v6d1xrv0wbe/ANTs-Linux-centos5_x86_64-v2.1.0-78931aa.tar.gz
       "2.0.3": https://dl.dropbox.com/s/oe4v52lveyt1ry9/ANTs-Linux-centos5_x86_64-v2.0.3-c996539.tar.gz
       "2.0.0": https://dl.dropbox.com/s/kgqydc44cc2uigb/ANTs-Linux-centos5_x86_64-v2.0.0-7ae1107.tar.gz
@@ -34,10 +34,10 @@ generic:
       {{ ants.install_dependencies() }}
       mkdir -p /tmp/ants/build
       git clone https://github.com/ANTsX/ANTs.git /tmps/ants/source
-      {% if ants.version != "master" and ants.version != "latest" %}
+      {% if ants.version != "master" and ants.version != "latest" -%}
       cd /tmp/ants/source
       git checkout {{ ants.version }}
-      {% endif %}
+      {% endif -%}
       cd /tmp/ants/build
       cmake {{ ants.cmake_opts|default("-DBUILD_SHARED_LIBS=ON") }} /tmp/ants/source
       make {{ ants.make_opts|default("-j1") }}
