--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -15,11 +15,12 @@
   binaries:
     dependencies:
       apt: bc libgomp1 libxmu6 libxt6 tcsh perl
+    env:
+      FREESURFER_HOME: "{{ freesurfer.install_path }}"
     instructions: |
-      RUN {install_deps}
-          && echo "Downloading minimized FreeSurfer ..."
-          && mkdir -p {install_path}
-          && curl -sSL --retry 5 https://dl.dropbox.com/s/nnzcfttc41qvt31/recon-all-freesurfer6-3.min.tgz
-          | tar xz -C {install_path} --strip-components 1
-          && sed -i '$isource $FREESURFER_HOME/SetUpFreeSurfer.sh' $ND_ENTRYPOINT
-      ENV FREESURFER_HOME={install_path}
+      {{ freesurfer.install_dependencies() }}
+      echo "Downloading minimized FreeSurfer ..."
+      mkdir -p {{ freesurfer.install_path }}
+      curl {{ freesurfer.curl_opts }} https://dl.dropbox.com/s/nnzcfttc41qvt31/recon-all-freesurfer6-3.min.tgz \
+      | tar xz -C {install_path} --strip-components 1
+      && sed -i '$isource $FREESURFER_HOME/SetUpFreeSurfer.sh' $ND_ENTRYPOINT
